--- a/Training/resources/css/main.css
+++ b/Training/resources/css/main.css
@@ -28,7 +28,7 @@ body{
     border-radius: 5px 45px 5px 45px;
     background: #EFEFEF;
     padding:20px;
-    box-shadow: 10px 10px 5px #959e98;
+    box-shadow: 10px 10px 5px #7e909e;
 
 }
 
