--- a/Training/resources/css/main.css
+++ b/Training/resources/css/main.css
@@ -68,3 +68,17 @@ hr {
 }
 
 
+/*pre{*/
+    /*font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;*/
+    /*margin-bottom: 10px;*/
+    /*overflow: auto;*/
+    /*width: auto;*/
+    /*padding: 5px;*/
+    /*background-color: #ffffff;*/
+    /*width: 650px;*/
+    /*padding-bottom: 20px;*/
+    /*max-height: 600px;*/
+    /*background:  : white;*/
+/*}*/
+
+
